--- a/configure.ac
+++ b/configure.ac
@@ -1978,6 +1978,8 @@ AC_CONFIG_FILES([Makefile
 		src/mod/event_handlers/mod_fail2ban/Makefile
 		src/mod/event_handlers/mod_format_cdr/Makefile
 		src/mod/event_handlers/mod_json_cdr/Makefile
+    src/mod/event_handlers/mod_json_kafka_cdr/Makefile
+    src/mod/event_handlers/mod_event_kafka/Makefile
 		src/mod/event_handlers/mod_kazoo/Makefile
 		src/mod/event_handlers/mod_radius_cdr/Makefile
 		src/mod/event_handlers/mod_odbc_cdr/Makefile
